--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,35 @@
-body {
-  background-color: #000;
-  /* background-image: url('./assets/background.png'); */
-  background-size: auto 100%;
-  background-position: center center;
-  background-repeat: no-repeat;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  color: #111111;
-  width: 100%;
-  height: 100vh;
-  margin: 0;
+:root {
+  --primary-color-white: #F2F4F7;
+  --primary-color-input: #F7F7F7;
+  --primary-color-black: #101828;
+  --primary-color-text: #475467;
+    --primary-color-red: #E44848;
+      --primary-color-yellow: #FFC531;
+      --secondary-color-red: #d84343;
 }
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--primary-color-text);
+  background-color: var(--primary-color-input);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 h1,
 h2,
 h3,
@@ -19,19 +37,60 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
+  margin: 0;
+  font-family: 'Roboto', Arial, sans-serif;
 }
-a {
-  text-decoration: none;
-}
+
+ol,
 ul {
   list-style: none;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 img {
-  display: block;
+  vertical-align: middle;
+  border-style: none;
 }
+
 button {
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+  background: transparent;
   cursor: pointer;
+  color: #fff;
+  font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+address {
+  font-style: normal;
+}
+
+a {
+  text-decoration: none;
 }
