--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,6 +1,6 @@
 
 .wrapper {
-    padding: 100px 64px 0px 64px;
+    padding: 50px 64px 0px 64px;
     max-width: 1440px;
     height: auto;
     display: flex;
@@ -8,21 +8,42 @@
     justify-content: center;
     align-items: center;
 }
+.mainContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.video {
+    width:600px;
+    height: 350px;
+    border-radius: 10px;
+}
 
 .hero {
-width: 1312px;
-height: 600px;
-background-size: cover;
-background-position: center;
-background-repeat: no-repeat;
+width: 400px;
+height: 250px;
+background-color: #5f5d5d;
+border-radius: 10px;
+}
+.mainItem {
+    border: 1px solid rgba(16, 24, 40, 0.2);
+border-radius: 20px;
+padding: 24px;
+}
+.mainItemVideo {
+     border: 1px solid rgba(16, 24, 40, 0.2);
+border-radius: 20px;
+padding: 24px;
 }
 .heroTitle {
     font-size: 48px;
     line-height: 26px;
-    margin-top: 50px;
     font-family: "Inter", sans-serif;
   color: var(--primary-color-black);
   font-weight: 600;
+  margin-bottom: 30px;
 }
 
 @keyframes blink {
@@ -33,17 +54,19 @@ background-repeat: no-repeat;
             color: var(--secondary-color-red);
         }
     }
-.link{
+.link {
     text-decoration: none;
     font-family: "Inter", sans-serif;
     color: var(--primary-color-black);
     font-size: 40px;
     font-weight: 700;
-   padding: 10px;
+   padding: 20px;
    border-radius: 10px;
    background-color: rgba(240, 248, 255, 0.174);
-    margin-bottom: 10px;
+    margin: 30px 0px 50px 0px;
     text-align: center;
     transition: 0.5s;
     animation: blink 1.5s infinite alternate;
+    border: 1px solid rgba(71, 84, 103, 0.2);
+border-radius: 200px;
 }
