--- a/src/components/CamperCard/CamperCard.module.css
+++ b/src/components/CamperCard/CamperCard.module.css
@@ -8,18 +8,19 @@ background-color: #fff;
 display: flex;
 gap: 24px;
 margin-bottom: 32px;
-z-index: 1;
 }
 
 .foto {
     border-radius: 10px;
 width: 290px;
 height: 310px;
+object-fit: cover;
 }
 .detailsWrapper {
     width: 526px;
 height: 310px;
 position: relative;
+
 }
 .nameWrapper{
     display: flex;
@@ -44,15 +45,21 @@ margin-bottom: 8px;
     fill: transparent;
     stroke: black;
 }
-
+.svgItem {
+    
+    fill: black;
+    stroke: transparent;
+}
 .ratingWrapper {
     display: flex;
     align-items: center;
+    gap: 4px;
 }
 
 .locationWrapper {
     display: flex;
    align-items: center;
+   gap: 4px;
 }
 .ratingWrap {
     display: flex;
@@ -77,6 +84,27 @@ height: auto;
   margin-bottom: 24px;
 position: absolute;
 z-index: 4;
+
+}
+.tooltip {
+    position: absolute;
+    display: block;
+    overflow: auto;
+    top: -215px;
+    left: 0;
+    z-index: 5;
+    font-size: 16px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        line-height: 1.5;
+        background: #fff;
+        color: var(--primary-color-text);
+       height: 100%;
+        padding: 40px 32px;
+       transform: translateY(100%);
+       border: 1px solid rgba(16, 24, 40, 0.2);
+border-radius: 20px;
+    transition: 0.5s;
 }
 
 
@@ -89,6 +117,13 @@ background: var(--primary-color-input);
 mix-blend-mode: multiply;
 display: flex;
     align-items: center;
+    color: black;
+    font-weight: 500;
+font-size: 16px;
+line-height: 125%;
+text-align: center;
+display: flex;
+gap: 8px;
 }
 .list {
     display: flex;
@@ -120,6 +155,7 @@ height: 720px;
 background-color: #fff;
 padding: 40px;
 z-index: 5;
+overflow: auto;
 }
 
 .modalBtnBox {
@@ -172,6 +208,7 @@ color: var(--primary-color-black);
     border-radius: 10px;
 width: 290px;
 height: 310px;
+object-fit: cover;
 }
 .modalDescription {
     font-family: "Inter", sans-serif;
