--- a/src/pages/FavoritesPage/FavoritesPage.module.css
+++ b/src/pages/FavoritesPage/FavoritesPage.module.css
@@ -1,1 +1,9 @@
-
+.wrapper {
+    padding: 100px 64px; 
+    max-width: 1440px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
+}
